Made the Text page simpler

--- a/para-page.html
+++ b/para-page.html
@@ -127,7 +127,7 @@
             min-width: 60rem;
             resize: none;
             overflow: none;
-            margin-top: -7rem;
+            margin-top: -27rem;
             margin-left: 30rem;
             /* margin: flex;
             display: flex center; */
@@ -157,7 +157,7 @@
         </div>
         <div class="wrapper">
 
-            <div class="intro-left">
+            <!-- <div class="intro-left">
                 <h1>Title</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint amet eveniet exercitationem, blanditiis
                     hic dolor. Voluptas quam saepe, aspernatur sequi ipsa corporis tempora nemo tempore commodi magnam
@@ -165,11 +165,11 @@
                 <!-- <a href="#" class="intro-cta">
                     Try it for Free
                 </a> -->
-            </div>
+            </div> 
 
-            <div class="intro-right">
+            <!-- <div class="intro-right">
                 <img src="https://i.postimg.cc/bJJR3th2/undraw-growth-analytics-8btt.png" alt="image">
-            </div>
+            </div> -->
         </div>
 
         <div class="bottom-left-gradient">
